Fix : bottom scroll bar no longer covers dice in the combat log

--- a/abovevtt.css
+++ b/abovevtt.css
@@ -934,6 +934,7 @@ div#scene_properties form > div {
     position: absolute;
     right: 0;
     top: 28px;
+    height: calc(100vh - 30px) !important;
 }
 
 .ddbc-tab-list__nav-item {
@@ -1506,7 +1507,6 @@ body {
     right: 0px;
     width: 340px;
     z-index: -1;
-    height: calc(-30px + 100vh);
 }
 div.sidebar__pane-content > div.selected-tab,
 div.ct-sidebar__pane-content > div.selected-tab {
